Fixed a bug about the scrolling of long pages with a z-index on my RoleetBar

--- a/frontend/src/components/styles/RoleetBar.scss
+++ b/frontend/src/components/styles/RoleetBar.scss
@@ -7,6 +7,7 @@ $avatarSize: 40px;
 $avatarBorderRadius: $layoutBorderWidth;
 
 #RoleetBar {
+  z-index: 1;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
